<resources>
    <string name="app_name">MUMIMA MODS</string>
    <string name="text_here">AAAA MODS</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="latest_mod">Latest mod</string>
    <string name="details">MOD DETAILS</string>
    <string name="install">INSTALL</string>

    <string name="explore">EXPLORE</string>
    <string name="favorite">FAVORITE</string>
    <string name="minecraft">MINECRAFT</string>
    <string name="mods">MODS</string>
    <string name="download_complete">Download Complete!</string>
    <string name="download_complete_description">If you enjoy using app, would you mind taking a moment to rate it?</string>
    <string name="update_text">UPDATED TODAY</string>
    <string name="back_header">BACK</string>
    <string name="loading">DOWNLOADING...</string>
    <string name="later">LATER</string>
    <string name="never">NEVER</string>
    <string name="rationale_write_permission">We need this permission for download file</string>
    <string name="minecraft_not_found_title">Minecraft not found!</string>
    <string name="minecraft_not_found_description">You need official minecraft to install mods or addons. Please download and install from Google Play.</string>
    <string name="ok_button">OKAY</string>
    <string name="cancel">CANCEL</string>
</resources>
